--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,10 @@ dependencies = [
     "numpy>=2.2.6",
     "torch>=2.10.0",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["tpu"]
